# 3D-Renderer

./: CMakeLists.txt  report.md
src/apps/: render_cli.cpp  render_qt.cpp
src/core/: Camera.h  Geometry.h  Math.h  Mesh.h  ObjLoader.cpp  ObjLoader.h  Renderer.cpp  Renderer.h
